--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,6 @@
 *.pt filter=lfs diff=lfs merge=lfs -text
 *corpus.txt filter=lfs diff=lfs merge=lfs
 *dictionary*.txt filter=lfs diff=lfs merge=lfs
+backend/models/*.pt filter=lfs diff=lfs merge=lfs -text
+backend/data/*.txt filter=lfs diff=lfs merge=lfs -text
+backend/data/*.csv filter=lfs diff=lfs merge=lfs -text
