--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -3,7 +3,7 @@
     "builds": [
       {
         "src": "src/main.py",
-        "use": "@vercel/python",
+        "use": "@vercel/python"
       }
     ],
     "routes": [
